GH-4006: [jena-ontapi] add DocumentGraphRepository#addMappings